# codewars

./: Cargo.toml  README.md
.github/workflows/: build.yml
4kyu/: algebraic_lists.rs  decode_morse_advanced.rs  number_of_integer_partitions.rs  paintfuck.rs  range_extraction.rs  snail_sort.rs  square_into_squares.rs
6kyu/: is_prime.rs  ministringfuck.rs  order_words.rs
7kyu/: find_middle_element.rs  high_and_low.rs  largest_five_digit_number.rs  people_in_bus.rs  reverse_words.rs
8kyu/: square_sum.rs
